CCS6344-Assignment-2-main/CCS6344-Assignment-2-main/02-security-groups.yml
AWSTemplateFormatVersion: "2010-09-09"
Description: "DBCS A2 - Step 2 Security Groups (ALB, App, DB)"

Parameters:
  VpcId:
    Type: AWS::EC2::VPC::Id
    Description: "Select the VPC created in Step 1 (dbcs-a2-vpc)"

  MyIpCidr:
    Type: String
    Default: "0.0.0.0/0"
    Description: "OPTIONAL: Your public IP in CIDR for SSH (e.g., 1.2.3.4/32). Keep default if not using SSH."

Resources:
  AlbSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: "ALB SG - allow HTTPS from Internet"
      VpcId: !Ref VpcId
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 443
          ToPort: 443
          CidrIp: 0.0.0.0/0
      Tags:
        - Key: Name
          Value: dbcs-a2-sg-alb

  AppSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: "App SG - allow HTTP only from ALB, optional SSH from admin IP"
      VpcId: !Ref VpcId
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          SourceSecurityGroupId: !Ref AlbSecurityGroup
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: !Ref MyIpCidr
      Tags:
        - Key: Name
          Value: dbcs-a2-sg-app

  DbSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: "DB SG - allow MySQL only from App SG"
      VpcId: !Ref VpcId
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 3306
          ToPort: 3306
          SourceSecurityGroupId: !Ref AppSecurityGroup
      Tags:
        - Key: Name
          Value: dbcs-a2-sg-db

Outputs:
  AlbSecurityGroupId:
    Value: !Ref AlbSecurityGroup
  AppSecurityGroupId:
    Value: !Ref AppSecurityGroup
  DbSecurityGroupId:
    Value: !Ref DbSecurityGroup
